# DSOPPlusSynthesis

./: CMakeLists.txt  README.md  SOP_plus.c  SOP_plus.h  arraylist.c  arraylist.h  bool_plus.c  bool_plus.h  bool_utils.c  bool_utils.h  linkedlist.c  linkedlist.h  list.c  list.h  main.c  synthesis_comparator.sh  test.c  test.sh  utils.h
